2006-09-27  Sergey Poznyakoff  <gray@gnu.org.ua>

	* tests/genfile.c (exec_command): Add extra spaces.

2006-09-08  Sergey Poznyakoff  <gray@gnu.org.ua>

	* tests/genfile.c (exec_command): Fix memory reallocation.

2006-08-07  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/system.h: Include <inttypes.h> unconditionally.
	The latest gnulib lets us do this.
	* m4/system.m4 (PU_SYSTEM): Don't check for inttypes.h
	Don't require gl_AC_TYPE_UINTMAX_T.
	Require gl_INTTYPES_H, gl_STDINT_H.

	* tests/genfile.c (reg_action): Return void, not int.
	(generate_simple_file, exec_command): Remove unused var.
	(print_stat): Avoid GCC warning about uninitialized var.

2006-07-09  Sergey Poznyakoff  <gray@gnu.org.ua>

	* THANKS: Add Ralf Wildenhues

2006-07-09  Ralf Wildenhues    <Ralf.Wildenhues@gmx.de>

	* doc/genfile.texi: Fix some typos.

2006-07-03  Sergey Poznyakoff  <gray@gnu.org.ua>

	* tests/genfile.c (get_size): Rewrite to avoid numeric overflow.

2006-06-25  Sergey Poznyakoff  <gray@gnu.org.ua>

	* lib/system.h (ST_IS_SPARSE): New macro
	* tests/genfile.c: Use ST_IS_SPARSE instead of IS_SPARSE_FILE

2006-06-21  Sergey Poznyakoff  <gray@gnu.org.ua>

	* paxlib/exit.c: Initialize the variable to avoid bogus errors
	when linking on Darwin. Reported by EXCOFFIER, Denis
	<denis.excoffier@airbus.com>.

2006-06-02  Sergey Poznyakoff  <gray@gnu.org.ua>

	* tests/genfile.c: New options --files-from and --null (same as in
	tar).
	* doc/genfile.texi: Document --files-from and --null options

2006-04-25  Sergey Poznyakoff  <gray@gnu.org.ua>

	* doc/genfile.texi: Document exit codes in create mode. Fix file
	size calculation in the example of genfile --sparse.
	* tests/genfile.c: Behave as described in the docs in sparse file
	creation mode. Verify created file, unless it goes to stdout.

2006-04-11  Sergey Poznyakoff  <gray@gnu.org.ua>

	* tests/genfile.c (print_stat): mode keyword can be optionally
	followed by a punctuation sign and a number, specifying the mask