@@ -6,7 +6,7 @@
 # with or without modifications, as long as this notice is preserved.
 
 AC_DEFUN([PU_SYSTEM],[
-  AC_HEADER_STDC
+  AC_REQUIRE([AC_HEADER_STDC])
 
   AC_CHECK_HEADERS_ONCE([string.h memory.h fcntl.h sys/wait.h \
  sys/gentape.h sys/tape.h sys/device.h sys/param.h sys/tprintf.h sys/mtio.h \
@@ -17,11 +17,11 @@ AC_DEFUN([PU_SYSTEM],[
 #include <sys/param.h>
 #endif])
 
-  AC_HEADER_TIME
+  AC_REQUIRE([AC_HEADER_TIME])
 
   AC_CHECK_MEMBERS([struct stat.st_blksize]) dnl instead of AC_STRUCT_ST_BLKSIZE
-  AC_STRUCT_ST_BLOCKS
-  AC_STRUCT_ST_BLKSIZE
+  AC_REQUIRE([AC_STRUCT_ST_BLOCKS])
+  AC_REQUIRE([AC_STRUCT_ST_BLKSIZE])
 
   AC_CHECK_FUNCS_ONCE(lstat mkfifo setlocale)
   AC_REQUIRE([gl_INTTYPES_H])
